--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,8 @@ header{
   align-items: center;
 }
 
-/* need to get the tab things right to skip to content */
-
-/* .skip a{
-  background: white;
+.skip a{
+  background: #ffffff;
   left: 0;
   padding: 6px;
   -webkit-transition: top 1s ease-out;
@@ -27,11 +25,12 @@ header{
 .skip a:focus {
   position: absolute;
   top: 20px
-} */
+}
 
 .nav_links{
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 :visited{
@@ -39,18 +38,17 @@ header{
 }
 
 .card {
-  background: #ffffff;
-  border: 2px solid #ffffff;
-  padding: 20px 0;
-  border-radius: 7px 7px 7px 0;
+  display: flex;
+  flex-direction: column;
   color: #000000;
+  flex-basis: 450px;
   width: 300px;
 }
 
 .pricing{
-  min-height: 450px;
   display: flex;
-  flex-flow: row wrap; 
+  flex-direction: column;
+  flex-flow: wrap; 
   align-items: center;
   justify-content: center;
   color: #ffffff;
@@ -58,10 +56,14 @@ header{
 
 .card header {
   background-color: #288088;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border: 2px solid #45ADAD;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
 
 .gallery{
-  min-height: 450px;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -74,18 +76,18 @@ header{
   width: 300px;
 }
 
-@-webkit-keyframes logo_grow{
-  from {width: 50; opacity: 0;}
+@-webkit-keyframes grow{
+  from {width: 50px; opacity: 0;}
   to {width: 425px; opacity: 1;}
 }
 
-@keyframes logo_grow{
+@keyframes grow{
   from {width: 50px; opacity: 0;}
   to {width: 425px; opacity: 1;}
-} 
+}
 
 #logo{
-  animation-name: logo_grow;
+  animation-name: grow;
   animation-duration: 5s;
   animation-iteration-count: initial;
 }
@@ -103,25 +105,22 @@ header{
   }
 
   .card header{
-    position:static;
+    position: static;
   }
 
   .nav_links{
     flex-direction: row; 
   }
 
-  .package {
-    flex-direction: column;
+  .card{
+    justify-content: center;
     flex-basis: 250px;
-  } 
-
+  }
 }
 
 @media screen and (prefers-reduced-motion: reduce){
   #logo {
     animation: none;
-    width: 420px;
-    opacity: 1;
   }
 }
 
@@ -131,6 +130,10 @@ header{
     background-image: none;
   }
 
+  /* #logo {
+    opacity: 0;
+  } */
+
   nav {
     width: 100%;
   }
@@ -138,17 +141,32 @@ header{
   .nav_links {
     display: flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content:space-around;
   }
 
-  .price {
+  .pricing {
     display: flex;
-    align-items: flex-end;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-flow: nowrap;
   }
 
   .card {
     border: 2px #45ADAD solid;
     flex-basis: 250px;
+  }
+
+  #pricing, .pricing, .card li:nth-child(1)::before {
+    content: "\1F44D";
+  }
+
+  #pricing, .pricing, .card li:nth-child(even)::after {
+    content: "\1F44D";
+  }
+
+  #pricing, .pricing, .card li:nth-child(3)::before {
+    content: "\1F44D";
   }
 
   #gallery, .gallery {
